--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^5.1.0",
     "multer": "^2.0.1",
     "pdf-parse": "^1.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
